--- a/TODOList.BLL/TODOList.BLL.csproj
+++ b/TODOList.BLL/TODOList.BLL.csproj
@@ -57,9 +57,11 @@
     <Compile Include="DTO\StepDTO.cs" />
     <Compile Include="DTO\TaskDTO.cs" />
     <Compile Include="DTO\TodoListDTO.cs" />
+    <Compile Include="Interfaces\IStepService.cs" />
     <Compile Include="Interfaces\ITaskService.cs" />
     <Compile Include="Interfaces\ITodoListService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\StepService.cs" />
     <Compile Include="Services\TaskService.cs" />
     <Compile Include="Services\TodoListService.cs" />
   </ItemGroup>
