added view model for user and todolist

--- a/TODOList/appsettings.json
+++ b/TODOList/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TODOList-A9AC0542-5E2C-44BC-9199-AEAEC310C561;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TODOList-A9AC0542-5E2C-44BC-9199-AEAEC310C561;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection":  "Server=NastyaL;Database=TODOList;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
