--- a/TODOList.WEB/TODOList.WEB.csproj
+++ b/TODOList.WEB/TODOList.WEB.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="Ninject" Version="3.3.4" />
   </ItemGroup>
 
 
