--- a/TODOList.WEB/TODOList.WEB.csproj
+++ b/TODOList.WEB/TODOList.WEB.csproj
@@ -19,6 +19,9 @@
     <Reference Include="TODOList.BLL">
       <HintPath>..\TODOList.BLL\bin\Debug\TODOList.BLL.dll</HintPath>
     </Reference>
+    <Reference Include="TODOList.DAL">
+      <HintPath>..\TODOList.DAL\bin\Debug\TODOList.DAL.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
