--- a/TODOList.BLL/TODOList.BLL.csproj
+++ b/TODOList.BLL/TODOList.BLL.csproj
@@ -122,6 +122,7 @@
     <Compile Include="DTO\TaskDTO.cs" />
     <Compile Include="DTO\TodoListDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Interfaces\IStepService.cs" />
     <Compile Include="Interfaces\ITaskService.cs" />
     <Compile Include="Interfaces\ITodoListService.cs" />
