--- a/TODOList.DAL/TODOList.DAL.csproj
+++ b/TODOList.DAL/TODOList.DAL.csproj
@@ -144,13 +144,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
-    <Compile Include="Entities\Step.cs" />
     <Compile Include="Entities\Task.cs" />
     <Compile Include="Entities\TodoList.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Migrations\20190509121050_TODO1.cs" />
-    <Compile Include="Migrations\20190509121050_TODO1.designer.cs">
-      <DependentUpon>20190509121050_TODO1.cs</DependentUpon>
+    <Compile Include="Entities\AppUser.cs" />
+    <Compile Include="Migrations\20190514114803_todo10.cs" />
+    <Compile Include="Migrations\20190514114803_todo10.designer.cs">
+      <DependentUpon>20190514114803_todo10.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -160,6 +159,7 @@
     <None Include="appsettings.json" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
