--- a/TODOList.BLL/TODOList.BLL.csproj
+++ b/TODOList.BLL/TODOList.BLL.csproj
@@ -121,13 +121,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO\StepDTO.cs" />
     <Compile Include="DTO\TaskDTO.cs" />
     <Compile Include="DTO\TodoListDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="Helpers\AppException.cs" />
+    <Compile Include="Helpers\AppSettings.cs" />
     <Compile Include="Interfaces\IService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\StepService.cs" />
     <Compile Include="Services\TaskService.cs" />
     <Compile Include="Services\TodoListService.cs" />
     <Compile Include="Services\UserService.cs" />
