add email notification

--- a/TODOList.WEB/appsettings.json
+++ b/TODOList.WEB/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Data Source=NastyaL;Initial Catalog=TodoList;Integrated Security=True;"
   },
   "AppSettings": {
-    "Secret":  "THIS IS MY SECRET STRING"
+    "Secret": "THIS IS MY SECRET STRING"
+  },
+  "Email": {
+    "Email": "leshencko.nastia2013@gmail.com",
+    "Password": "password",
+    "Host": "host",
+    "Port": "port"
   }
 }
