--- a/TODOList.BLL/packages.config
+++ b/TODOList.BLL/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="8.1.0" targetFramework="net471" />
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net471" />
+  <package id="Ical.Net" version="4.1.11" targetFramework="net471" />
+  <package id="MailKit" version="2.1.5.1" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore" version="2.2.0" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net471" />
@@ -15,6 +18,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net471" />
+  <package id="MimeKit" version="2.1.5.1" targetFramework="net471" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net471" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
@@ -23,5 +28,8 @@
   <package id="System.Interactive.Async" version="3.2.0" targetFramework="net471" />
   <package id="System.Memory" version="4.5.1" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net471" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net471" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net471" />
 </packages>
