--- a/TODOList.DAL/appsettings.json
+++ b/TODOList.DAL/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=NastyaL;Initial Catalog=TodoList;Integrated Security=True;"
+    //"DefualtConnection": "Server=tcp:todolistweb20190517052233dbserver.database.windows.net,1433;Initial Catalog=TODOListWEB20190517052233_db;Persist Security Info=False;User ID=Anastasiya;Password=49504828Longlife*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
     "Secret": "THIS IS MY SECRET STRING"
